[metadata]
name = pardus
description =  An Orchestra to manage pardus device
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1 Beta
author = Mohammad S.Niaei
author_email = niaei@pardus.org.tr
keywords = SSH, Configure, Install/remove, Services
license = GNU/GPL V3
license_files = LICENSE
url = https://github.com/mshemuni/spy/
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux

[options]
packages =
    pardus
install_requires =
    paramiko
    typing_extensions
    types-paramiko
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox
    tox-conda

[options.package_data]
spy =
    py.typed


[options.entry_points]
console_scripts =
    pardus = main:main

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401